--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,7 +16,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Outfit;
+  font-family: 'Averta', sans-serif;
 }
 
 @layer base{
